<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2014 Antew
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources>
    <string name="_0_of_">"0 of "</string>
    <string name="_of_">" of "</string>
    <string name="about_reddit_in_pictures">About Reddit In Pictures</string>
    <string name="all">All</string>
    <string name="app_name">Reddit In Pictures</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="are_you_sure_you_want_to_log_out_with_username">Are you sure you want to log out, %s?</string>
    <string name="cancel">Cancel</string>
    <string name="check_out_this_image">Check out this image</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="delete">Delete</string>
    <string name="edit_subreddits">Edit Subreddits</string>
    <string name="enter_a_password">Enter a password!</string>
    <string name="enter_a_username">Enter a username!</string>
    <string name="enter_filename">Enter Filename</string>
    <string name="enter_the_subreddit">Enter the subreddit</string>
    <string name="error">"Error: "</string>
    <string name="error_connecting_to_reddit">Error connecting to Reddit</string>
    <string name="error_loading_image">Error loading image :(</string>
    <string name="error_parsing_reddit_data">Error parsing reddit data!</string>
    <string name="error_saving_image_unable_to_get_image_path">Error saving image, unable to get image path</string>
    <string name="exit">Exit</string>
    <string name="frontpage">Frontpage</string>
    <string name="go_to_market">Go to Market</string>
    <string name="i_ve_rated_it">I\'ve Rated It</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="in_exchange_for_disabling_ads">In exchange for disabling ads, I only ask that you rate the app.</string>
    <string name="in_exchange_for_disabling_ads_dialog">In exchange for disabling ads, I only ask that you rate the application on the Google Play store. Thank you for your support!</string>
    <string name="items_selected">" items selected"</string>
    <string name="loading">Loading</string>
    <string name="log_in">Login</string>
    <string name="log_in_to_reddit">Login to Reddit</string>
    <string name="log_on">Login</string>
    <string name="log_out">Logout</string>
    <string name="log_out_">"Logout: "</string>
    <string name="logging_on">Logging In</string>
    <string name="launch_links_to_the_reddit_mobile_interface">Launch links to the reddit mobile interface.</string>
    <string name="long_press_to_start_selection">Long press to start selection</string>
    <string name="make_sure_you_have_an_internet_connection">Error connecting to Reddit: Make sure you have an internet connection.</string>
    <string name="may_impact_performance">May impact performance</string>
    <string name="name">Filename:</string>
    <string name="no">No</string>
    <string name="no_image_to_load">No image to load!</string>
    <string name="no_image_to_share">No image to share!</string>
    <string name="no_images_have_loaded_yet">No images have loaded yet!</string>
    <string name="no_images_were_returned">No images were returned.</string>
    <string name="no_network_connection_toast">No network connection found</string>
    <string name="no_thanks">No thanks</string>
    <string name="ok">OK</string>
    <string name="one_item_selected">One item selected</string>
    <string name="password">Password:</string>
    <string name="reddit_in_pictures">Reddit In Pictures</string>
    <string name="reset_to_default_subreddits">Reset to default subreddits?</string>
    <string name="retrieving_subscribed_subreddits">Retrieving subscribed subreddits</string>
    <string name="save_image">Save Image</string>
    <string name="select_items">Select Items</string>
    <string name="share_using_">Share using…</string>
    <string name="show_nsfw_images_while_browsing">Show NSFW images while browsing.</string>
    <string name="some_nsfw_images_were_hidden">Some nsfw images were hidden, this can be disabled in settings.</string>
    <string name="swiping_disabled">Swiping disabled</string>
    <string name="swiping_enabled">Swiping enabled</string>
    <string name="thank_you_for_your_support">Thank you for your support!</string>
    <string name="username">Username:</string>
    <string name="uses_more_bandwidth">Uses more bandwidth</string>
    <string name="help_make_better">Help make Reddit in Pictures better by allowing us to track anonymous usage data.</string>
    <string name="you_must_be_logged_in_to_vote">You must be logged in to vote!</string>

    <string name="default_subreddits_title">Reset to default subreddits?</string>
    <string name="default_subreddits_message">Are you sure you want to reset to the default subreddits?</string>


    <!-- Single Word/Phrase Resources -->
    <string name="view">View</string>
    <string name="about">About</string>
    <string name="view_subreddit">View Subreddit</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="nsfw">NSFW</string>
    <string name="comments">comments</string>
    <string name="vote">Vote</string>
    <string name="upgrade">Upgrade</string>
    <string name="yes">Yes</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="go">Go</string>
    <string name="info">Info</string>
    <string name="subreddit">Subreddit</string>
    <string name="subreddit_icon">Subreddit Icon</string>
    <string name="add_subreddit">Add Subreddit</string>
    <string name="filter_subreddits">Filter Subreddits</string>
    <string name="view_as_list">View As List</string>
    <string name="view_as_grid">View As Grid</string>
    <string name="sort_by_popularity">Sort By Popularity</string>
    <string name="sort_alphabetically">Sort Alphabetically</string>
    <string name="reset_subreddits">Reset Subreddits</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="open_menu">Open Menu</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="version_">"Version "</string>
    <string name="copyright_">"Copyright "</string>
    <string name="close">Close</string>
    <string name="about_subreddit">About Subreddit</string>
    <string name="_subscribers">" Subscribers"</string>
    <!-- End Single Word/Phrase Resources -->

    <!-- Shared Preferences Keys -->
    <string name="pref_show_nsfw_images">Show NSFW Images</string>
    <string name="pref_load_high_quality_images">Load high quality images</string>
    <string name="pref_use_mobile_interface">Use Mobile Interface</string>
    <string name="pref_analytics_opt_in">Send Anonymous Usage Data</string>
    <string name="pref_about">about</string>
    <!-- End Shared Preferences keys -->

    <!-- Default Subreddits, grabbed image subreddits from the top 125 subreddits by activity -->
    <string name="default_subreddits_multi">pics+funny+gaming+aww+AdviceAnimals+EarthPorn+gifs+woahdude+mildlyinteresting+lifehacks+reactiongifs+photoshopbattles+FoodPorn+wheredidthesodago+HistoryPorn+cats+fffffffuuuuuuuuuuuu+standupshots+thewalkingdead+doctorwho+comics+QuotesPorn+carporn+SpacePorn</string>
    <string name="media_credits">Media Credits</string>
    <string name="disable_swiping">Disable swiping</string>
    <string name="enable_swiping">Enable swiping</string>
    <string name="share_image">Share Image</string>
    <string name="open_post_on_reddit">Open Post on Reddit</string>
    <string name="hot">Hot</string>
    <!-- The string "new" can't be used as the name for a string as it is reserved. -->
    <string name="new_text_value">New</string>
    <string name="rising">Rising</string>
    <string name="top_hour">Top: Hour</string>
    <string name="top_today">Top: Today</string>
    <string name="top_week">Top: Week</string>
    <string name="top_month">Top: Month</string>
    <string name="top_year">Top: Year</string>
    <string name="top_all_time">Top: All Time</string>
    <string name="controversial_hour">Controversial: Hour</string>
    <string name="controversial_today">Controversial: Today</string>
    <string name="controversial_week">Controversial: Week</string>
    <string name="controversial_month">Controversial: Month</string>
    <string name="controversial_year">Controversial: Year</string>
    <string name="controversial_all_time">Controversial: All Time</string>
    <string name="sort">Sort</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="report_image_display_issue">Report Image Display Issue</string>
    <string name="image_display_issue_reported">Image display issue reported. \nThanks for letting us know!</string>
    <string name="reddit_options">Reddit Options</string>
    <string name="reddit_in_pictures_options">Reddit in Pictures Options</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="report">Report</string>
    <string name="load_high_quality_images_summary">By default we load smaller images to help speed up image load times when viewing large images. You can always load high quality images by turning this on. Turning this on will use more data and images will load more slowly since they are larger.</string>
</resources>