<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2014 Antew
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/change_view"
        android:icon="@drawable/ic_action_list_2_dark"
        android:showAsAction="always"
        android:title="@string/view_as_list" />

    <item
        android:id="@+id/sort_subreddits"
        android:icon="@drawable/ic_action_sort_1_dark"
        android:showAsAction="always"
        android:title="@string/sort">
        <menu>
            <group
                android:id="@+id/categories"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/category_hot"
                    android:title="@string/hot" />
                <item
                    android:id="@+id/category_new"
                    android:title="@string/new_text_value" />
                <item
                    android:id="@+id/category_rising"
                    android:title="@string/rising" />
                <item
                    android:id="@+id/category_top_hour"
                    android:title="@string/top_hour" />
                <item
                    android:id="@+id/category_top_today"
                    android:title="@string/top_today" />
                <item
                    android:id="@+id/category_top_week"
                    android:title="@string/top_week" />
                <item
                    android:id="@+id/category_top_month"
                    android:title="@string/top_month" />
                <item
                    android:id="@+id/category_top_year"
                    android:title="@string/top_year" />
                <item
                    android:id="@+id/category_top_all_time"
                    android:title="@string/top_all_time" />
                <item
                    android:id="@+id/category_controversial_hour"
                    android:title="@string/controversial_hour" />
                <item
                    android:id="@+id/category_controversial_today"
                    android:title="@string/controversial_today" />
                <item
                    android:id="@+id/category_controversial_week"
                    android:title="@string/controversial_week" />
                <item
                    android:id="@+id/category_controversial_month"
                    android:title="@string/controversial_month" />
                <item
                    android:id="@+id/category_controversial_year"
                    android:title="@string/controversial_year" />
                <item
                    android:id="@+id/category_controversial_all_time"
                    android:title="@string/controversial_all_time" />
            </group>
        </menu>

    </item>

    <item
        android:id="@+id/refresh_all"
        android:icon="@drawable/ic_action_reload_dark"
        android:showAsAction="always"
        android:title="@string/refresh" />

    <item
        android:id="@+id/login"
        android:icon="@drawable/ic_action_key_dark"
        android:showAsAction="ifRoom"
        android:title="@string/log_in" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings_dark"
        android:showAsAction="ifRoom"
        android:title="@string/settings" />


</menu>