<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Reddit Options">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_use_mobile_interface"
            android:summary="@string/launch_links_to_the_reddit_mobile_interface"
            android:title="@string/pref_use_mobile_interface" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_show_nsfw_images"
            android:summary="@string/show_nsfw_images_while_browsing"
            android:title="@string/pref_show_nsfw_images" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_load_high_quality_thumbnails"
            android:summary="@string/uses_more_bandwidth"
            android:title="@string/pref_load_high_quality_thumbnails" />
    </PreferenceCategory>
    <PreferenceCategory android:title="About">
        <Preference
            android:key="@string/pref_about"
            android:title="@string/about_reddit_in_pictures">
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>