<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:menuCategory="system">
        <item
            android:id="@+id/lock_viewpager"
            android:icon="@drawable/ic_action_lock_open_dark"
            android:orderInCategory="1"
            android:showAsAction="ifRoom"
            android:title="@string/disable_swiping" />
        <item
            android:id="@+id/save_post"
            android:icon="@drawable/ic_action_save_dark"
            android:orderInCategory="2"
            android:showAsAction="ifRoom"
            android:title="@string/save_image" />
        <item
            android:id="@+id/share_post"
            android:icon="@drawable/ic_action_share_dark"
            android:orderInCategory="3"
            android:showAsAction="ifRoom"
            android:title="@string/share_image" />
        <item
            android:id="@+id/view_post"
            android:icon="@drawable/ic_action_globe_dark"
            android:orderInCategory="4"
            android:showAsAction="ifRoom"
            android:title="@string/open_post_on_reddit" />
    </group>

</menu>