<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/front">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_more_dark"
            android:background="@android:color/transparent"
            android:id="@+id/ib_more"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/open_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tv_subreddit"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/text_size_medium"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/ib_more" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/back"
        android:visibility="gone"
        android:background="#1A1A1A">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_view"
            android:src="@drawable/ic_action_picture_dark"
            android:contentDescription="@string/view_subreddit"
            android:background="@android:color/transparent"
            android:layout_weight=".25"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_subscribe"
            android:src="@drawable/ic_action_tick_dark"
            android:contentDescription="@string/subscribe"
            android:background="@android:color/transparent"
            android:layout_weight=".25"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_unsubscribe"
            android:src="@drawable/ic_action_cancel_dark"
            android:contentDescription="@string/unsubscribe"
            android:background="@android:color/transparent"
            android:layout_weight=".25"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_info"
            android:src="@drawable/ic_action_info_dark"
            android:contentDescription="@string/info"
            android:background="@android:color/transparent"
            android:layout_weight=".25"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_delete"
            android:src="@drawable/ic_action_trash_dark"
            android:contentDescription="@string/delete"
            android:background="@android:color/transparent"
            android:layout_weight=".25"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>