<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2014 Antew
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_holo_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/app_name"
            style="@style/AboutHeader" />

        <View
            style="@style/AboutDivider" />

        <ImageView
            android:id="@+id/about_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_photo"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_version"
            style="@style/AboutSubHeader" />

        <TextView
            android:id="@+id/tv_copyright"
            style="@style/AboutSubHeader" />

        <TextView
            android:text="http://www.antew.com"
            android:autoLink="web"
            style="@style/AboutSubHeader" />

        <TextView
            android:text="@string/open_source_licenses"
            style="@style/AboutHeader" />

        <View
            style="@style/AboutDivider" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="MenuDrawer" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="A slide-out menu implementation, which allows users to navigate between views in your app. Available at: https://github.com/SimonVT/android-menudrawer" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="PhotoView" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="Implementation of ImageView for Android that supports zooming, by various touch gestures. Available at: https://github.com/chrisbanes/PhotoView" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="Gson" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="Gson is a Java library that can be used to convert Java Objects into their JSON representation. It can also be used to convert a JSON string to an equivalent Java object. Gson can work with arbitrary Java objects including pre-existing objects that you do not have source-code of. Available at: https://code.google.com/p/google-gson/" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="ButterKnife" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="View &quot;injection&quot; library for Android. Available at: https://github.com/JakeWharton/butterknife" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="Picasso" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="A powerful image downloading and caching library for Android. Available at: https://github.com/square/picasso" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="Dagger" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="A fast dependency injector for Android and Java. Available at: https://github.com/square/dagger" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="OkHttp" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="An HTTP &amp; SPDY client for Android and Java applications. Available at: https://github.com/square/okhttp" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="Otto" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="An enhanced Guava-based event bus with emphasis on Android support. Available at: https://github.com/square/otto" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="Smooth Progress Bar" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="A small Android library allowing you to have a smooth and customizable horizontal indeterminate ProgressBar. Available at: https://github.com/castorflex/SmoothProgressBar" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="SDK Manager Plugin" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="Gradle plugin which downloads and manages your Android SDK. Available at: https://github.com/JakeWharton/sdk-manager-plugin" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="CWAC AndDown" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="Markdown processor for Android. Available at: https://github.com/commonsguy/cwac-anddown" />

        <TextView
            android:text="@string/media_credits"
            style="@style/AboutHeader" />

        <View
            style="@style/AboutDivider" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="Reddit Alien Vector Image" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="By MakoSanders, available at: http://makosanders.deviantart.com/" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="Sunset Cruise" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="By ecstaticist, available at: http://www.flickr.com/photos/ecstaticist/2812682461/" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="Racing Stars" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="By Andrew Stawarz, available at: http://www.flickr.com/photos/stawarz/2981086612/" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="My Tree At Dusk" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="By Joiseyshowaa, avilable at: http://www.flickr.com/photos/joiseyshowaa/1400175456/" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="Autumn Is On Its Way" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="By AmUnivers, available at: http://www.flickr.com/photos/amunivers/239455430/" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="Grey Skies Over Matsumoto" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="By EugeniusD80, available at: http://www.flickr.com/photos/zhzheka/701816373/" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="The Green Ascent" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="By vsz, available at: http://www.flickr.com/photos/vs/29582361/" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="The Tree" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="By helmet13, available at: http://www.flickr.com/photos/22281745@N04/2149169348/" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="See Harness" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="By DCCXLIX, available at: http://www.flickr.com/photos/dccxlix/399948328/" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="Q" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="By Darny, available at: http://www.flickr.com/photos/darn/539225017/" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="Colorful Joy" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="By robokow, available at: http://www.flickr.com/photos/robino/463790976/" />

        <TextView
            style="@style/AboutCreditHeader"
            android:text="Nexus Above Erskine Lake" />

        <TextView
            style="@style/AboutCreditSubHeader"
            android:text="By drp, available at: http://www.flickr.com/photos/drp/43707772/in/photostream/" />

    </LinearLayout>

</ScrollView>